# CalcP1

./: CMakeLists.txt  CMakeLists.txt.user.b62591c  calculatorwidget.cpp  calculatorwidget.h  calculatorwidgetfunctions.cpp  inputNoise.txt  inputRLS.txt  inputReceiver.txt  inputSig.txt  inputTarg.txt  inputwidget.cpp  inputwidget.h  mainwindow.cpp  mainwindow.h  togglewidget.cpp  togglewidget.h
